--- a/public/css/frontend.css
+++ b/public/css/frontend.css
@@ -41,8 +41,7 @@
 
 /*!---------- 1. GLOBAL STYLES ----------*/
 body {
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  /*-webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale;*/
   font-size: 13px;
   line-height: 24px;
   font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
@@ -906,7 +905,6 @@ nav .btn,
   height: 55px;
   max-height: 55px;
   line-height: 53px;
-  background-color: rgba(34, 34, 34, 0.2);
 }
 .nav-bar .module,
 .nav-bar .module-group {
@@ -952,12 +950,13 @@ nav.bg-dark .logo-dark {
   position: relative;
   width: 100%;
   height: 55px;
-  font-family: "Raleway", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 .menu.inline-block {
   width: auto;
 }
 .menu li a {
+  position: relative;
   font-size: 11px;
   text-transform: uppercase;
   font-weight: 600;
@@ -1489,7 +1488,7 @@ nav.absolute {
   position: absolute;
 }
 nav.fixed {
-  position: fixed;
+  /*position: fixed; */
   visibility: hidden;
   opacity: 0;
 }
@@ -1719,7 +1718,8 @@ input[type="password"] {
   cursor: default;
 }
 input[type="text"],
-input[type="password"] {
+input[type="password"],
+input[type="email"] {
   background: #f5f5f5;
   border: none;
   width: 100%;
@@ -1744,7 +1744,8 @@ button.transparent {
   color: #fff !important	;
 }
 input[type="text"]:focus,
-input[type="password"]:focus {
+input[type="password"]:focus,
+input[type="email"]:focus {
   outline: 1px solid #ccc;
 }
 textarea {
@@ -2025,7 +2026,7 @@ form.thirds span {
   display: block;
   color: #fff;
 }
-.attempted-submit .field-error {
+.field-error {
   outline: 1px solid #ce3838 !important;
 }
 form iframe.mail-list-form {
@@ -4742,8 +4743,7 @@ section + .portfolio-pullup {
 .foundry_modal {
   overflow-y: auto;
   max-height: 100%;
-  max-width: 50%;
-  width: 50%;
+  /*max-width: 50%; width: 50%; */
   position: fixed;
   padding: 80px 48px;
   transition: all 0.3s ease;
@@ -4798,7 +4798,7 @@ section + .portfolio-pullup {
 }
 .foundry_modal *:not(.background-image-holder):not(.close-modal) {
   z-index: 4;
-  position: relative;
+  /*position: relative; */
 }
 .foundry_modal.image-bg .close-modal,
 .foundry_modal.no-bg .close-modal {
@@ -4816,8 +4816,7 @@ section + .portfolio-pullup {
 }
 @media all and (max-width: 1190px) {
   .foundry_modal {
-    max-width: 70%;
-    width: 70%;
+    /*max-width: 70%; width: 70%; */
     padding: 64px 32px;
   }
 }
