--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -9536,4 +9536,39 @@ table.text-center, table.text-center td, table.text-center th {
 .table-hover > tbody > tr:hover > td:first-child i.hov-icon:before {
   display: inline-block; }
 
+.control-sidebar-dark .tab-pane input[type="number"] {
+  background-color: transparent;
+  border: none;
+  border-bottom: 1px solid gray;
+  width: 60px;
+  outline: 0; }
+
+.control-sidebar-dark .tab-pane:focus {
+  outline: 0; }
+
+.dataTables_wrapper .row {
+  margin-left: 0;
+  margin-right: 0; }
+
+.answer-question-image {
+  width: 100%;
+  height: auto; }
+
+.question-date {
+  font-size: 18px;
+  fotn-weight: bold; }
+
+.question-ip {
+  color: gray; }
+
+.question-body {
+  font-size: 16px;
+  margin-top: 10px; }
+
+.textarea-html5 {
+  width: 100%;
+  height: 600px;
+  border: 1px solid #dddddd;
+  padding: 10px; }
+
 /*# sourceMappingURL=admin.css.map */
