--- a/resources/assets/css/frontend/custom.css
+++ b/resources/assets/css/frontend/custom.css
@@ -858,3 +858,9 @@ button.delete-draft-question{
 .module.notifications-widget-handle{
     padding: 0;
 }
+.cart-overview a, .cart-overview li{
+    line-height: 1;
+}
+.cart-widget-handle .btn:hover{
+    color: #FFFFFF;
+}
