--- a/resources/assets/less/frontend/theme.less
+++ b/resources/assets/less/frontend/theme.less
@@ -203,6 +203,7 @@ hr.short-thick{ max-width: 50px; border-top: 5px solid #ccc; opacity: 1 !importa
 @heading-font: "Raleway";
 .bold{ font-weight: 600 !important; }
 .thin{ font-weight: 100 !important; }
+.normal{ font-weight: 400 !important; }
 
 @media all and (max-width: 767px){
 	.thin{ font-weight: 300 !important; }
