--- a/resources/assets/css/frontend/custom.css
+++ b/resources/assets/css/frontend/custom.css
@@ -147,7 +147,11 @@
 }
 
 .mr-15px{
-    margin-right: 15px;
+    margin-right: 15px !important;
+}
+
+.mt-15px{
+    margin-top: 15px;
 }
 
 table td.w170px{
@@ -981,4 +985,36 @@ footer.bg-dark span{
 .payment-form{
     max-width: 500px;
     margin: auto;
+}
+input[type="text"].voucher-claim{
+    background-color: #FFFFFF;
+    border: 1px solid #ccc;
+    width: 70%;
+    margin-bottom: 0;
+    margin-top: 24px;
+}
+input[type="text"].voucher-claim:focus{
+    outline: none;
+}
+.vouchers-form-select .pricing-table{
+    cursor: pointer;
+    border: 1px solid #EEEEEE;
+}
+.label_description{
+    color: #BBBBBB;
+    margin-bottom: 5px;
+}
+span.text-red{
+    font-size: 16px;
+    font-weight: normal;
+    color: red;
+    display: inline;
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+.btn.voucher-check{
+    width: initial;
+}
+.btn:focus{
+    color: inherit;
+    text-decoration: none;
 }
