--- a/resources/assets/css/frontend/custom.css
+++ b/resources/assets/css/frontend/custom.css
@@ -306,15 +306,18 @@ form .textarea-holder .charNum{
     float: right;
 }
 
-.image-upload .drop-zone.empty::before{
+.image-upload .drop-zone.empty::before,
+.image-upload .drop-article-zone.empty::before{
     content: "\e64e";
 }
 
-.image-upload .drop-zone.empty img{
+.image-upload .drop-zone.empty img,
+.image-upload .drop-article-zone.empty img{
     display: none;
 }
 
-.image-upload .drop-zone::before{
+.image-upload .drop-zone::before,
+.image-upload .drop-article-zone::before{
     font-family: 'themify';
     content: "";
     color: #CCCCCC;
@@ -326,7 +329,8 @@ form .textarea-holder .charNum{
     position: absolute;
 }
 
-.image-upload .drop-zone {
+.image-upload .drop-zone,
+.image-upload .drop-article-zone {
     position: relative;
     width: 50%;
     padding-bottom: 50%;
@@ -337,7 +341,8 @@ form .textarea-holder .charNum{
     cursor: pointer;
 }
 
-.image-upload .question-image img.image-preview{
+.image-upload .question-image img.image-preview,
+.image-upload .article-image img.image-article-preview{
     position: absolute;
     max-width: 100%;
     max-height: 100%;
@@ -506,7 +511,7 @@ form.general-profile .input-with-label span {
     cursor: default;
 }
 
-form.general-profile h5, form.login-profile h5{
+form.general-profile h5, form.login-profile h5, form.create-article h5{
     margin-bottom: 10px;
 }
 
@@ -1017,4 +1022,31 @@ span.text-red{
 .btn:focus{
     color: inherit;
     text-decoration: none;
+}
+.articles-list .table>tbody>tr:first-child>th,
+.articles-list .table>thead>tr:first-child>th{
+    border-top: none;
+}
+.articles-list p{
+    padding: 8px;
+}
+
+.create-article .mce-btn .mce-txt{
+    font-family: Verdana, Geneva, Arial, Helvetica, sans-serif;
+    font-weight: normal;
+    font-size: 10px;
+    display: inherit;
+}
+.create-article .mce-panel{
+    background-color: #f5f5f5;
+    border: 0 solid rgba(0, 0, 0, 0.02);
+}
+.create-article .mce-tinymce{
+    margin-bottom: 20px;
+}
+.create-article .mce-path{
+    display: none;
+}
+.create-article .mce-btn{
+    background-color: #f5f5f5;
 }
