--- a/public/css/front-custom.css
+++ b/public/css/front-custom.css
@@ -146,6 +146,10 @@
     margin-bottom: 0;
 }
 
+.mb-25px{
+    margin-bottom: 25px;
+}
+
 .mr-15px{
     margin-right: 15px !important;
 }
@@ -1089,5 +1093,67 @@ span.text-red{
 }
 .create-article .mce-btn{
     background-color: #f5f5f5;
+}
+.inner-article .post-title h4{
+    font-size: 35px;
+}
+.inner-article .post-snippet img{
+    max-height: 500px;
+    max-width: 50%;
+    float: left;
+    margin-right: 25px;
+    margin-bottom: 25px;
+}
+.inner-article .post-meta, .post-meta .tags{
+    display: block;
+}
+.edit-article .feature-3 i.warning{
+    color: #d88519;
+}
+.w23p{
+    width: 23%;
+}
+.w11p{
+    width: 11%;
+}
+.w14p{
+    width: 14%;
+}
+.w15p{
+    width: 15%;
+}
+.article-list-img{
+    max-width: 100%;
+    max-height: 72px;
+    width: auto;
+}
+.articles-list td a{
+    font-size: 16px;
+    display: block;
+    line-height: 2;
+}
+
+.facebook-blog{
+    margin-bottom: 15px;
+    height: 28px;
+}
+.blog-block-image{
+    background-color: #FFFFFF;
+}
+
+.pagination li span:hover, .pagination li.active span, .pagination li.active:hover span {
+    background: #47b475;
+    color: #fff;
+    border-color: #47b475;
+}
+
+.pagination li span {
+    width: 32px;
+    height: 32px;
+    text-align: center;
+    padding: 6px 0;
+    margin: 0 4px;
+    color: #292929;
+    font-weight: 400;
 }
 /*# sourceMappingURL=front-custom.css.map */
